# dh-file-sorter

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
src/: console.py  consts.py  models.py  sorter.py
